kubernetes/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      # initContainers:
      #   - name: wait-for-auth
      #     image: busybox
      #     command: ['sh', '-c', 'until nc -z -v -w30 auth-service.default 80; do echo "waiting for auth-service"; sleep 5; done;']
      containers:
        - name: users
          image: minghan2000/kub-demo-users:latest
