kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  type: ClusterIP # not reacheable from the outside world, only reacheable from within the cluster -> to access this, we can no longer use localhost. we need to use this service ip address.
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
