kubernetes/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
