kubernetes/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
